--- a/ContentBoxes/ContentBoxes.css
+++ b/ContentBoxes/ContentBoxes.css
@@ -40,6 +40,7 @@ body{
     width: 80px;
     height: 80px;
     border-radius: 50%;
+    transition: all 0.5s ease-in-out;
 }
 
 .container .box .icon .fa{
